tests/errors/E009.zen
int main() {
    let a : bool = 4;   // E009: Type mismatch in variable declaration
    return a;
}